micromixin-test-j8/src/main/java/org/stianloader/micromixin/test/j8/targets/invalid/InvalidPrintAttemptTestB.java
package org.stianloader.micromixin.test.j8.targets.invalid;

public class InvalidPrintAttemptTestB {
    public static void staticMethod() {
    }
}
